# uuba-tech

./: README.md  findings.md  index.html  progress.md  robots.txt  sitemap.xml  task_plan.md
uuba-tech-api/: .dockerignore  .env.example  .gitignore  Dockerfile.prod  Makefile  alembic.ini  docker-compose.yml  healthcheck.py  pyproject.toml  requests.http
uuba-tech-api/.claude/: settings.local.json
uuba-tech-api/alembic/: env.py
uuba-tech-api/app/: config.py  database.py  deps.py  exceptions.py  main.py  seed.py  seed_regua.py
uuba-tech-api/app/auth/: api_key.py  (+1 more)
uuba-tech-api/deploy/: README.md  deploy.sh  docker-compose.vps.yml  nginx-uuba.conf
uuba-tech-api/tests/: conftest.py  test_admin_rbac.py  test_admin_reset_post.py  test_aggregate_events.py  test_aggregate_fatura.py  test_anonimizar_post.py  test_arsenal_sweep.py  test_attack_auth.py  test_attack_business_logic.py  test_attack_injection.py  test_attack_mass_assignment.py  test_auth.py  test_auth_bearer.py  test_auth_cache_ttl.py  test_auth_environment.py  test_auth_unkey.py  test_backlog_issues.py  test_bug_hunt.py  test_bug_hunt_full.py  test_bugs_critical.py  test_busca_clientes.py  test_clientes.py  test_cobrancas.py  test_compliance.py  test_compliance_edge_cases.py  test_data_integrity.py  test_domain_events.py  test_event_bus.py  test_exportar.py  test_faturas.py  test_health.py  test_health_version.py  test_idempotency.py  test_idor_cross_tenant.py  test_ids.py  test_import_csv.py  test_integrations_credentials_post.py  test_jobs_vencimento.py  test_lgpd_anonimizacao.py  test_lgpd_endpoints.py  (+20 more)
(+192 files in other folders)
