[project]
name = "uuba-tech-api"
version = "0.1.0"
description = "Uúba Tech API — cobrança inteligente para PMEs brasileiras"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "nanoid>=2.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "scalar-fastapi>=1.8.0",
    "python-multipart>=0.0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "aiosqlite>=0.20.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
ignore = ["F821"]  # forward refs in SQLAlchemy models

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]  # routers imported after app setup
